# accurating

./: .gitignore  LICENSE  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: docs.yml
accurating/: __init__.py  model.py
accurating/tests/: model_test.py
docs/: accurating.html  index.html  search.js
docs/accurating/: model.html  tests.html
docs/accurating/tests/: model_test.html
ielo/: __init__.py
ielo/tests/: model_test.py
iglo/: README.md  cfg.json  iglo.py  igor.txt  matches.json  ratings.json
