[tool.poetry]
name = "AccuRating"
version = "0.6.1"
description = "AccuRating is a library for accurate player ranking based on match results."
authors = ["Lukasz Lew <lukasz.lew@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/lukaszlew/accurating"
documentation = "https://lukaszlew.github.io/accurating/"

[tool.poetry.dependencies]
python = "^3.10"
jax = "^0.4.8"
jaxlib = "^0.4.7"
types-requests = "^2.30.0.0"
tabulate = "^0.9.0"
types-tabulate = "^0.9.0.2"

[tool.poetry.group.dev.dependencies]
pdoc = "^13.1.0"
pytest = "^6.2.5"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
